# decoding_iter

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-WHATWG  README.md
.github/workflows/: rust.yml
benches/: bench_decode_ibm866.rs  bench_decode_shift_jis.rs  bench_decode_utf16.rs
decoding_iter_macros/: Cargo.toml
decoding_iter_macros/src/: lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_decode_big5.rs  fuzz_decode_gb18030.rs  fuzz_decode_iso_2022_jp.rs  fuzz_decode_shift_jis.rs  fuzz_decode_utf16be.rs  fuzz_decode_utf16le.rs
src/: big5.rs  euc_jp.rs  euc_kr.rs  gb18030.rs  gbk.rs  ibm866.rs  iso_2022_jp.rs  iso_8859_10.rs  iso_8859_13.rs  iso_8859_14.rs  iso_8859_15.rs  iso_8859_16.rs  iso_8859_2.rs  iso_8859_3.rs  iso_8859_4.rs  iso_8859_5.rs  iso_8859_6.rs  iso_8859_7.rs  iso_8859_8.rs  koi8_r.rs  koi8_u.rs  lib.rs  macintosh.rs  shift_jis.rs  utf_16.rs  utf_8.rs  windows_1250.rs  windows_1251.rs  windows_1252.rs  windows_1253.rs  windows_1254.rs  windows_1255.rs  windows_1256.rs  windows_1257.rs  windows_1258.rs  windows_874.rs  x_mac_cyrillic.rs
tests/: diff_test_decode.rs  test_big5.rs  test_euc_jp.rs  test_euc_kr.rs  test_gb18030.rs  test_iso_2022_jp.rs  test_shift_jis.rs  test_utf16.rs  test_utf_8.rs  utils.rs
